--- a/app/templates/album.html
+++ b/app/templates/album.html
@@ -1,23 +1,23 @@
 <main class="album-view container narrow">
     <section class="clearfix">
         <div class="column half">
-            <img src="{{{albumData.albumArtUrl}}}" class="album-cover-art">
+            <img src="{{album.albumData.albumArtUrl}}" class="album-cover-art">
         </div>
         <div class="album-view-details column half">
-            <h2 class="album-view-title">{{albumData.title}}</h2>
-            <h3 class="album-view-artist">{{albumData.artist}}</h3>
-            <h5 class="album-view-release-info">{{albumData.year}} {{albumData.label}}</h5>
+            <h2 class="album-view-title">{{album.albumData.title}}</h2>
+            <h3 class="album-view-artist">{{album.albumData.artist}}</h3>
+            <h5 class="album-view-release-info">{{album.albumData.year}} {{album.albumData.label}}</h5>
         </div>
     </section>
-    <tr class="album-view-song-item" ng-mouseover="hovered = true" ng-mouseleave="hovered = false">
-        <tr class="album-view-song-item" ng-repeat="songs in albumData">
-            <td class="song-item-number">
-                <span ng-show="!playing && !hovered">{{$index+1}}</span>
+    <table class="album-view-song-item" ng-mouseover="hovered = true" ng-mouseleave="hovered = false" >
+        <tr class="album-view-song-item" ng-repeat="song in album.albumData.songs">
+            <td class="song-item-number" >{{$index+1}}
+                <span ng-show="!playing && !hovered"> </span>
                 <a class="album-song-button" ng-show="!playing && hovered"><span class="ion-play"></span></a>
                 <a class="album-song-button" ng-show="playing"><span class="ion-pause"></span></a>
             </td>
-            <td class="song-item-title">{{albumData.songs.title}}</td>
-            <td class="song-item-duration">{{albumData.songs.duration}}</td>
+            <td class="song-item-title">{{song.title}}</td>
+            <td class="song-item-duration">{{song.duration}}</td>
         </tr>
         </table>
 </main>
