--- a/app/templates/album.html
+++ b/app/templates/album.html
@@ -9,9 +9,9 @@
             <h5 class="album-view-release-info">{{album.albumData.year}} {{album.albumData.label}}</h5>
         </div>
     </section>
-    <table class="album-view-song-item" ng-mouseover="hovered = true" ng-mouseleave="hovered = false" >
+    <table class="album-view-song-item">
         <tr class="album-view-song-item" ng-repeat="song in album.albumData.songs">
-            <td class="song-item-number" >
+            <td class="song-item-number" ng-mouseover="hovered = true" ng-mouseleave="hovered = false">
                  <span ng-show="!hovered && !song.playing">{{ $index + 1 }}</span>
                 <a class="album-song-button" ng-show="hovered && !song.playing" ng-click="album.songPlayer.play(song)"><span class="ion-play"></span></a>
                 <a class="album-song-button" ng-show="song.playing" ng-click="album.songPlayer.pause(song)"><span class="ion-pause"></span></a>
