--- a/app/templates/player_bar.html
+++ b/app/templates/player_bar.html
@@ -4,14 +4,14 @@
             <a class="previous" ng-click="playerBar.songPlayer.previous()">
                 <span class="ion-skip-backward"></span>
             </a>
-            
+
             <a class="play-pause">
                 <span class="ion-play" ng-show="!playerBar.songPlayer.currentSong.playing" ng-click="playerBar.songPlayer.play()">
      </span>
                 <span class="ion-pause" ng-show="playerBar.songPlayer.currentSong.playing" ng-click="playerBar.songPlayer.pause()">
      </span>
             </a>
-            
+
             <a class="next" ng-click="playerBar.songPlayer.next()">
                 <span class="ion-skip-forward"></span>
             </a>
@@ -28,7 +28,7 @@
         </div>
         <div class="control-group volume">
             <span class="icon ion-volume-high"></span>
-            <seek-bar></seek-bar>
+            <seek-bar value="{{ playerBar.songPlayer.currentTime }}" max="{{ playerBar.songPlayer.currentSong.duration }}" on-change="playerBar.songPlayer.setCurrentTime(value)"></seek-bar>
         </div>
     </div>
 </section>
