--- a/app/templates/player_bar.html
+++ b/app/templates/player_bar.html
@@ -28,7 +28,7 @@
         </div>
         <div class="control-group volume">
             <span class="icon ion-volume-high"></span>
-            <seek-bar></seek-bar>
+            <seek-bar value ="80" max="100" on-change="playerBar.songPlayer.setVolume(value)"></seek-bar>
         </div>
     </div>
 </section>
